--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calango-design",
   "description": "Calango Design is an open source ASCII art editor that runs in the browser.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "vite dev",
@@ -27,6 +27,7 @@
     "globals": "^15.0.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "sass-embedded": "^1.78.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "typescript": "^5.0.0",
